使用 Colaboratory 建立

--- a/410651607.ipynb
+++ b/410651607.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "410651607.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNke9m5JmIPe7MwNVaVjx1q",
+      "authorship_tag": "ABX9TyNDeZAoJiSX7NGwVVL/tSYq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,44 +31,38 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "tbsEhaojkGsy"
-      },
-      "outputs": [],
-      "source": [
-        "Player=['Curry','Green','Durant','Looney','Thompson']\n",
-        "Fraction = [30,5,22,6,28]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Player[2]='Wiggins'\n",
-        "print('金州勇士現在有的球員陣容',Player[0:5])\n",
-        "print('勇士今天最高的三個得分',Fraction[0:5:2],'球員分別為',Player[0:5:2])\n",
-        "print('勇士今天最低的兩個得分',Fraction[1:4:2],'球員分別為',Player[1:4:2])\n",
-        "print('勇士今天最高得分為',Player[-5],'分數為',max(Fraction),'分')\n",
-        "print('勇士今天最低得分為',Player[-4],'分數為',min(Fraction),'分')"
-      ],
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "3tllaKAvlAr8",
-        "outputId": "76acc03e-c0e9-4fa7-a065-8ca0a479f1c4"
+        "id": "j37ntA_j5Z4m",
+        "outputId": "29df6e82-77a8-4b25-846b-622d815e7cb3"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "金州勇士現在有的球員陣容 ['Curry', 'Green', 'Wiggins', 'Looney', 'Thompson']\n",
-            "勇士今天最高的三個得分 [30, 22, 28] 球員分別為 ['Curry', 'Wiggins', 'Thompson']\n",
-            "勇士今天最低的兩個得分 [5, 6] 球員分別為 ['Green', 'Looney']\n",
-            "勇士今天最高得分為 Curry 分數為 30 分\n",
-            "勇士今天最低得分為 Green 分數為 5 分\n"
+            "1 * 1 = 1\t1 * 2 = 2\t1 * 3 = 3\t1 * 4 = 4\t1 * 5 = 5\t1 * 6 = 6\t1 * 7 = 7\t1 * 8 = 8\t1 * 9 = 9\t\n",
+            "2 * 1 = 2\t2 * 2 = 4\t2 * 3 = 6\t2 * 4 = 8\t2 * 5 = 10\t2 * 6 = 12\t2 * 7 = 14\t2 * 8 = 16\t2 * 9 = 18\t\n",
+            "3 * 1 = 3\t3 * 2 = 6\t3 * 3 = 9\t3 * 4 = 12\t3 * 5 = 15\t3 * 6 = 18\t3 * 7 = 21\t3 * 8 = 24\t3 * 9 = 27\t\n",
+            "4 * 1 = 4\t4 * 2 = 8\t4 * 3 = 12\t4 * 4 = 16\t4 * 5 = 20\t4 * 6 = 24\t4 * 7 = 28\t4 * 8 = 32\t4 * 9 = 36\t\n",
+            "5 * 1 = 5\t5 * 2 = 10\t5 * 3 = 15\t5 * 4 = 20\t5 * 5 = 25\t5 * 6 = 30\t5 * 7 = 35\t5 * 8 = 40\t5 * 9 = 45\t\n",
+            "6 * 1 = 6\t6 * 2 = 12\t6 * 3 = 18\t6 * 4 = 24\t6 * 5 = 30\t6 * 6 = 36\t6 * 7 = 42\t6 * 8 = 48\t6 * 9 = 54\t\n",
+            "7 * 1 = 7\t7 * 2 = 14\t7 * 3 = 21\t7 * 4 = 28\t7 * 5 = 35\t7 * 6 = 42\t7 * 7 = 49\t7 * 8 = 56\t7 * 9 = 63\t\n",
+            "8 * 1 = 8\t8 * 2 = 16\t8 * 3 = 24\t8 * 4 = 32\t8 * 5 = 40\t8 * 6 = 48\t8 * 7 = 56\t8 * 8 = 64\t8 * 9 = 72\t\n",
+            "9 * 1 = 9\t9 * 2 = 18\t9 * 3 = 27\t9 * 4 = 36\t9 * 5 = 45\t9 * 6 = 54\t9 * 7 = 63\t9 * 8 = 72\t9 * 9 = 81\t\n"
           ]
         }
+      ],
+      "source": [
+        "for i in range(1,10):\n",
+        "  for j in range(1,10):\n",
+        "    k=i*j\n",
+        "    if(k<10):\n",
+        "      print(i,'*',j,'=',k,end='\\t')\n",
+        "    else:\n",
+        "      print(i,'*',j,'=',k,end='\\t')\n",
+        "  print()  "
       ]
     },
     {
@@ -77,7 +71,7 @@
         ""
       ],
       "metadata": {
-        "id": "WIMydB6_nkND"
+        "id": "I9VD_p2d6qli"
       },
       "execution_count": null,
       "outputs": []
