使用 Colaboratory 建立

--- a/期末實作_統計1A_邱韋仁_410651607.ipynb
+++ b/期末實作_統計1A_邱韋仁_410651607.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "期末實作_班級_姓名_學號.ipynb",
+      "name": "「期末實作_班級_姓名_學號.ipynb」的副本",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -80,6 +80,19 @@
       "metadata": {
         "id": "J-00zBusFK0w"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('班級:統計1A')\n",
+        "print('學號:410651607')\n",
+        "print('姓名:邱韋仁')"
+      ],
+      "metadata": {
+        "id": "eB7cYmceyHwr"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
